# sublimetext-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  projectname.sublime-project
src/: CMakeLists.txt  main.cpp
